--- a/package.json
+++ b/package.json
@@ -36,6 +36,10 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
+  "homepage": "https://github.com/Tsukugi/Taihou#readme",
+  "bugs": {
+    "url": "https://github.com/Tsukugi/Taihou/issues"
+  },
   "devDependencies": {
     "@types/jest": "^26.0.14",
     "@types/node": "^14.14.45",
