--- a/tsconfig.esm.json
+++ b/tsconfig.esm.json
@@ -7,7 +7,7 @@
     "rootDir": "./src",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
-    "declaration": true,
+    "declaration": true
   },
   "include": ["src/**/*.ts"],
   "exclude": ["src/tests", "node_modules"]
