--- a/package.json
+++ b/package.json
@@ -44,17 +44,17 @@
         "url": "https://github.com/Tsukugi/Taihou/issues"
     },
     "devDependencies": {
-        "@types/jest": "^26.0.14",
+        "@jest/globals": "^29.7.0",
         "@types/node": "^14.14.45",
         "@typescript-eslint/eslint-plugin": "^4.2.0",
         "@typescript-eslint/parser": "^4.2.0",
         "eslint": "^7.17.0",
         "eslint-config-prettier": "^8.3.0",
-        "jest": "^26.4.2",
+        "jest": "^29.7.0",
         "prettier": "2.4.1",
-        "ts-jest": "^26.4.0",
+        "ts-jest": "^29.1.1",
         "ts-loader": "^9.2.6",
-        "typescript": "4.1.5",
+        "typescript": "^5.2.2",
         "webpack": "^5.58.1",
         "webpack-cli": "^4.9.0",
         "webpack-node-externals": "^3.0.0"
