--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "webpack:build": "npx webpack --mode=production",
         "webpack:watch": "npx webpack --mode=development --watch",
         "build": "npm run webpack:build",
-        "build:prod": "npm run prettier:write && npm run lint && npm run webpack:build",
+        "build:prod": "npm run test && npm run prettier:write && npm run lint && npm run webpack:build",
         "prepare": "npm run build"
     },
     "keywords": [
@@ -46,8 +46,8 @@
     "devDependencies": {
         "@jest/globals": "^29.7.0",
         "@types/node": "^14.14.45",
-        "@typescript-eslint/eslint-plugin": "^4.2.0",
-        "@typescript-eslint/parser": "^4.2.0",
+        "@typescript-eslint/eslint-plugin": "^6.9.1",
+        "@typescript-eslint/parser": "^6.9.1",
         "eslint": "^7.17.0",
         "eslint-config-prettier": "^8.3.0",
         "jest": "^29.7.0",
