--- a/.npmignore
+++ b/.npmignore
@@ -1,5 +1,4 @@
 #Development folders
-.vscode
 src
 examples
 tests
@@ -7,6 +6,8 @@ typedoc
 test
 ./*
 !package.json
+!README.md
+node_modules
 
 #Root configuration files
 .github
@@ -19,3 +20,4 @@ tsconfig.json
 package-lock.json
 yarn.lock
 *.tgz
+.vscode
