--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,13 @@
         "module": "esnext",
         "target": "esnext",
         "lib": ["ESNext", "dom"],
-        "moduleResolution": "node",
+        "moduleResolution": "Bundler",
         "outDir": "./dist",
         "rootDir": "./src",
         "esModuleInterop": true,
         "allowSyntheticDefaultImports": true,
-        "noEmit": true,
+        "declaration": true /* Create sourcemaps for d.ts files. */,
+        "emitDeclarationOnly": true,
         "strict": true,
         "types": ["node"]
     },
