--- a/.npmignore
+++ b/.npmignore
@@ -4,8 +4,6 @@ tests
 typedoc
 test
 ./*
-!package.json
-!README.md
 node_modules
 
 #Root configuration files
@@ -15,7 +13,7 @@ node_modules
 .*rc.json
 .*rc.js
 *.config.js
-tsconfig.json
+webpack.*.mjs
 package-lock.json
 yarn.lock
 *.tgz
